search for city filter

--- a/ufo-level-1/StarterCode/index.html
+++ b/ufo-level-1/StarterCode/index.html
@@ -43,6 +43,17 @@
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
+                <form>
+                  <div class="form-group">
+                    <ul class="list-group" id="filters">
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a city</label>
+                        <input class="form-control" id="city" type="text" placeholder="houston">
+                      </li>
+                    </ul>
+                  </div>
+                  <button id="filter-city" type="button" class="btn btn-default">Filter Table</button>
+                </form>
               </div>
             </div>
           </aside>
