--- a/ufo-level-1/StarterCode/index.html
+++ b/ufo-level-1/StarterCode/index.html
@@ -43,18 +43,39 @@
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                 </form>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">Advanced Search</div>
+              <div class="panel-body">
                 <form>
                   <div class="form-group">
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
-                        <label for="date">Enter a city</label>
+                        <label for="date">Enter a Date</label>
+                        <input class="form-control" id="date" type="text" placeholder="1/11/2011">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a City</label>
                         <input class="form-control" id="city" type="text" placeholder="houston">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a State Code</label>
+                        <input class="form-control" id="state" type="text" placeholder="az">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a Country Code</label>
+                        <input class="form-control" id="country" type="text" placeholder="us">
+                      </li>
+                      <li class="filter list-group-item">
+                        <label for="date">Enter a Shape</label>
+                        <input class="form-control" id="shape" type="text" placeholder="az">
                       </li>
                     </ul>
                   </div>
                   <button id="filter-city" type="button" class="btn btn-default">Filter Table</button>
                 </form>
-              </div>
+                </div>
             </div>
           </aside>
         </div>
