--- a/ufo-level-1/StarterCode/index.html
+++ b/ufo-level-1/StarterCode/index.html
@@ -30,7 +30,7 @@
         <div class="col-md-2">
           <aside class="filters">
             <div class="panel panel-default">
-              <div class="panel-heading">Filter Search</div>
+              <div class="panel-heading"> Single Filter Search</div>
               <div class="panel-body">
                 <form>
                   <div class="form-group">
